<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/Margin_Top"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/small_padding_top"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">


    <TextView
        style="@style/style_textview"
        android:layout_width="135dp"
        android:layout_height="match_parent"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="292dp"
        android:layout_height="36dp"
        android:autofillHints="what is your nick name"
        android:ems="10"
        android:hint="@string/What_is_your_nick_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done" />

    <TextView
        android:id="@+id/nickname_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageView
        android:layout_width="408dp"
        android:layout_height="136dp"
        android:contentDescription="@string/Image_description"
        app:srcCompat="@drawable/_606983598984__2_"
        tools:srcCompat="@drawable/_606983598984__2_"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#E1D6D6">

        <TextView
            android:id="@+id/Bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bio"
            android:textAlignment="center" />
    </ScrollView>
</LinearLayout>